# Respondent

./: .gitignore  README.md  index.html  package-lock.json  package.json  vitest.config.ts
docs/superpowers/plans/: 2026-06-12-low-latency-meeting-assistant.md  2026-06-13-e2e-persistence-floating-window.md  2026-06-13-multi-provider-llm.md  2026-06-13-openai-realtime-asr-adapter.md  2026-06-13-openai-responses-llm-adapter.md  2026-06-13-provider-config-menu.md  2026-06-13-streaming-asr-orchestration.md  2026-06-13-streaming-llm-orchestration.md  2026-06-13-tauri-frontend-emit-bridge.md  2026-06-14-document-rag.md
docs/superpowers/specs/: 2026-06-12-low-latency-meeting-assistant-design.md  2026-06-12-wasapi-loopback-capture-design.md  (+9 more)
docs/verification/: production-readiness.md
src/: App.test.tsx  App.tsx  styles.css  styles.test.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: build-assets.mjs  installer.nsi
src-tauri/src/: commands.rs  lib.rs  main.rs  provider_config.rs  secret_store.rs  window_visibility.rs
src-tauri/src/asr/: bailian_realtime.rs  client.rs  endpointer.rs  mock.rs  mod.rs  openai_realtime.rs  session.rs  siliconflow_file.rs  websocket.rs
src-tauri/src/audio/: capture.rs  convert.rs  devices.rs
src-tauri/src/docs/: bm25.rs  chunk.rs  mod.rs  store.rs
src-tauri/src/llm/: client.rs  mock.rs  mod.rs  openai_compatible.rs  openai_responses.rs  reply_trigger.rs  session.rs  streaming.rs
src-tauri/src/session/: db.rs  encryption.rs  mod.rs  saved.rs
src-tauri/tests/: asr_orchestration.rs  audio_contract.rs  bailian_realtime_asr.rs  commands.rs  e2e_real_network.rs  llm_orchestration.rs  loopback_capture_smoke.rs  openai_compatible_llm.rs  openai_realtime_asr.rs  openai_responses_llm.rs  provider_config.rs  provider_contract.rs  secret_store_keyring.rs  session_db.rs  siliconflow_file_asr.rs  streaming_engine.rs
src/assets/: providerLogos.ts
src/components/: AppearancePanel.tsx  ConversationHistoryPanel.tsx  DocumentsPanel.tsx  FieldLabel.tsx  MarkdownContent.tsx  ProviderPanel.tsx  ProviderSelect.tsx  ReplyStylePanel.tsx  SaveSessionPanel.tsx  ToggleSwitch.tsx
src/domain/: endpointing.test.ts  endpointing.ts  events.test.ts  events.ts  exportTranscript.test.ts  exportTranscript.ts  providerFormValidation.test.ts  providerFormValidation.ts  replyEngine.test.ts  replyStyleLayout.test.ts  replyStyleLayout.ts  transcriptEngine.test.ts  transcriptEngine.ts
src/services/: appearanceBridge.test.ts  appearanceBridge.ts  dialogWindows.test.ts  dialogWindows.ts  mockRealtime.ts  realtimeBridge.test.ts  realtimeBridge.ts  tauriApi.ts  windowCapability.test.js  windowFit.test.ts  windowFit.ts  windowVisibility.test.ts  windowVisibility.ts
src/state/: appearanceSettings.test.ts  appearanceSettings.ts  providerProfiles.test.ts  providerProfiles.ts  replyStylePresets.test.ts  replyStylePresets.ts  sessionHistory.test.ts  sessionHistory.ts  sessionStore.ts
